--- a/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.html
@@ -1,66 +1,76 @@
 <form [formGroup]="addUserForm">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="mb-32">Form Layout</h4>
-  
-        <!-- Row with two inputs and space between -->
-        <div class="d-flex gap-24">
-          <mat-form-field class="flex-1 fs-16" appearance="outline">
-            <mat-label>First Name</mat-label>
-            <input matInput type="text" formControlName="firstName" placeholder="First Name" />
-          </mat-form-field>
-  
-          <mat-form-field class="flex-1 fs-16" appearance="outline">
-            <mat-label>Last Name</mat-label>
-            <input matInput type="text" formControlName="lastName" placeholder="Last Name" />
-          </mat-form-field>
-        </div>
-        <div class="d-flex gap-24">
-            <mat-form-field class="flex-1 fs-16" appearance="outline">
-              <mat-label>Email</mat-label>
-              <input matInput type="email" formControlName="email" placeholder="Email" />
-            </mat-form-field>
-    
-            <mat-form-field class="flex-1 fs-16" appearance="outline">
-              <mat-label>Phone</mat-label>
-              <input matInput type="text" formControlName="phone" placeholder="Phone" />
-            </mat-form-field>
-          </div>
-          <div class="d-flex gap-24">
-            <mat-form-field class="flex-1 fs-16" appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput type="password" formControlName="password" placeholder="Password" />
-            </mat-form-field>
-    
-            <mat-form-field class="flex-1 fs-16" appearance="outline">
-              <mat-label>Confirm Password</mat-label>
-              <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm your Password" />
-            </mat-form-field>
-          </div>
-          <div class="d-flex gap-24">
-            <mat-form-field class="flex-1 fs-16" appearance="outline">
-                <mat-label>Designation</mat-label>
-                <mat-select formControlName="departments">
-                  <mat-option *ngFor="let des of designation" [value]="des.value">{{ des.label }}</mat-option>
-                </mat-select>
-              </mat-form-field>
-    
-              <mat-form-field class="flex-1 fs-16" appearance="outline">
-                <mat-label>Select Outlet</mat-label>
-                <mat-select formControlName="branchId">
-                  <mat-option *ngFor="let outlet of outlets" [value]="outlet.value">{{ outlet.label }}</mat-option>
-                </mat-select>
-              </mat-form-field>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="mb-32">Form Layout</h4>
 
-              <!-- <mat-slide-toggle formControlName="isActive">Active</mat-slide-toggle> -->
-          </div>
+      <!-- Row with two inputs and space between -->
+      <div class="d-flex gap-24">
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>User Name</mat-label>
+          <input matInput type="text" formControlName="username" placeholder="User Name" />
+        </mat-form-field>
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>First Name</mat-label>
+          <input matInput type="text" formControlName="firstName" placeholder="First Name" />
+        </mat-form-field>
+
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Last Name</mat-label>
+          <input matInput type="text" formControlName="lastName" placeholder="Last Name" />
+        </mat-form-field>
       </div>
-  
-      <!-- Action buttons -->
-      <div mat-dialog-actions class="modal-btn">
-        <button mat-raised-button type="submit" color="primary">Save</button>
-        <a mat-raised-button mat-dialog-close color="warn">Close</a>
+      <div class="d-flex gap-24">
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Email</mat-label>
+          <input matInput type="email" formControlName="email" placeholder="Email" />
+        </mat-form-field>
+
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Phone</mat-label>
+          <input matInput type="text" formControlName="phone" placeholder="Phone" />
+        </mat-form-field>
+      </div>
+      <div class="d-flex gap-24" *ngIf="!isEdit">
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" formControlName="password" placeholder="Password" />
+        </mat-form-field>
+
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Confirm Password</mat-label>
+          <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm your Password" />
+        </mat-form-field>
+      </div>
+      <div class="d-flex gap-24">
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Designation</mat-label>
+          <mat-select formControlName="designationId">
+            <mat-option *ngFor="let des of designation" [value]="des.id">{{ des.name }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field class="flex-1 fs-16" appearance="outline">
+          <mat-label>Select Outlet</mat-label>
+          <mat-select formControlName="branchId">
+            <mat-option *ngFor="let branch of branchList" [value]="branch.id">{{ branch.name }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <!-- <mat-slide-toggle formControlName="isActive">Active</mat-slide-toggle> -->
       </div>
     </div>
-  </form>
-  
+
+    <!-- Action buttons -->
+    <div mat-dialog-actions class="modal-btn">
+      <button mat-raised-button type="button" color="primary" (click)="onSave()" [disabled]="loading">
+        <ng-container *ngIf="!loading; else loadingSpinner">
+          {{buttonText}}
+        </ng-container>
+        <ng-template #loadingSpinner>
+          <mat-spinner diameter="20" [strokeWidth]="2" class="me-2"></mat-spinner>
+        </ng-template>
+      </button>
+      <a mat-raised-button mat-dialog-close color="warn">Close</a>
+    </div>
+  </div>
+</form>
