--- a/src/app/components/pos-configuration/outlet-user/outlet-user.component.scss
+++ b/src/app/components/pos-configuration/outlet-user/outlet-user.component.scss
@@ -4,3 +4,29 @@
     justify-content: flex-end;
     margin-top: 10px;
 }
+.badge{
+    width: 40px;
+}
+
+.table-container {
+    position: relative;
+  }
+  
+  .table-loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 100%;
+  }
+  
+  .table-responsive.loading {
+    pointer-events: none;
+    opacity: 0.5;
+  }
