--- a/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="addUserForm">
   <div class="card">
     <div class="card-body">
-      <h4 class="mb-32">Form Layout</h4>
+      <h4 class="mb-32">{{buttonText}} User</h4>
 
       <!-- Row with two inputs and space between -->
       <div class="d-flex gap-24">
