--- a/src/app/components/pos-configuration/modals/branch-dialog/branch-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/branch-dialog/branch-dialog.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="addBranchForm">
   <div class="card">
     <div class="card-body">
-      <h4 class="mb-32">Add Branch</h4>
+      <h4 class="mb-32">{{buttonText}} Branch</h4>
 
       <!-- Row with two inputs and space between -->
       <div class="main-form">
