--- a/src/app/components/pos-configuration/modals/item-dialog/item-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/item-dialog/item-dialog.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="addItemForm">
   <div class="card">
     <div class="card-body">
-      <h4 class="mb-32">Add Item</h4>
+      <h4 class="mb-32">{{buttonText}} Item</h4>
 
       <!-- Row with two inputs and space between -->
       <div class="main-form">
