--- a/src/app/components/pos-configuration/branch/branch.component.html
+++ b/src/app/components/pos-configuration/branch/branch.component.html
@@ -34,6 +34,18 @@
             </td>
           </ng-container>
   
+          <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef> Branch Address </th>
+            <td mat-cell *matCellDef="let element">
+              <span class="mb-0 fw-medium">{{element.address}}</span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="pnrNum">
+            <th mat-header-cell *matHeaderCellDef> TNR Number </th>
+            <td mat-cell *matCellDef="let element">
+              <span class="mb-0 fw-medium">{{element.pnrNum}}</span>
+            </td>
+          </ng-container>
           <!-- Active Column -->
           <ng-container matColumnDef="active">
             <th mat-header-cell *matHeaderCellDef> Active </th>
