--- a/src/app/components/pos-configuration/categories/categories.component.html
+++ b/src/app/components/pos-configuration/categories/categories.component.html
@@ -26,11 +26,10 @@
             </td>
           </ng-container>
 
-          <!-- Branch Column -->
-          <ng-container matColumnDef="branchName">
-            <th mat-header-cell *matHeaderCellDef> Branch </th>
+          <ng-container matColumnDef="printer">
+            <th mat-header-cell *matHeaderCellDef> Printer </th>
             <td mat-cell *matCellDef="let element">
-              <span class="mb-0 fw-medium">{{element?.branch?.name}}</span>
+              <span class="mb-0 fw-medium">{{element?.printer}}</span>
             </td>
           </ng-container>
 
