--- a/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.html
@@ -6,10 +6,6 @@
       <!-- Row with two inputs and space between -->
       <div class="d-flex gap-24">
         <mat-form-field class="flex-1 fs-16" appearance="outline">
-          <mat-label>User Name</mat-label>
-          <input matInput type="text" formControlName="username" placeholder="User Name" />
-        </mat-form-field>
-        <mat-form-field class="flex-1 fs-16" appearance="outline">
           <mat-label>First Name</mat-label>
           <input matInput type="text" formControlName="firstName" placeholder="First Name" />
         </mat-form-field>
@@ -19,34 +15,34 @@
           <input matInput type="text" formControlName="lastName" placeholder="Last Name" />
         </mat-form-field>
       </div>
+      <!-- Row with two inputs and space between -->
       <div class="d-flex gap-24">
         <mat-form-field class="flex-1 fs-16" appearance="outline">
-          <mat-label>Email</mat-label>
-          <input matInput type="email" formControlName="email" placeholder="Email" />
+          <mat-label>User Name</mat-label>
+          <input matInput type="text" formControlName="username" placeholder="User Name" />
         </mat-form-field>
-
-        <mat-form-field class="flex-1 fs-16" appearance="outline">
-          <mat-label>Phone</mat-label>
-          <input matInput type="text" formControlName="phone" placeholder="Phone" />
-        </mat-form-field>
-      </div>
-      <div class="d-flex gap-24" *ngIf="!isEdit">
-        <mat-form-field class="flex-1 fs-16" appearance="outline">
+        <mat-form-field class="flex-1 fs-16" appearance="outline" *ngIf="!isEdit">
           <mat-label>Password</mat-label>
           <input matInput type="password" formControlName="password" placeholder="Password" />
         </mat-form-field>
-
-        <mat-form-field class="flex-1 fs-16" appearance="outline">
-          <mat-label>Confirm Password</mat-label>
-          <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm your Password" />
-        </mat-form-field>
+      
       </div>
+      
       <div class="d-flex gap-24">
         <mat-form-field class="flex-1 fs-16" appearance="outline">
           <mat-label>Designation</mat-label>
           <mat-select formControlName="designationId">
             <mat-option *ngFor="let des of designation" [value]="des.id">{{ des.name }}</mat-option>
           </mat-select>
+          <button
+          *ngIf="addUserForm.controls['designationId'].value"
+          matSuffix
+          mat-icon-button
+          aria-label="Clear selection"
+          (click)="clearSelection('designationId')"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
         </mat-form-field>
 
         <mat-form-field class="flex-1 fs-16" appearance="outline">
@@ -54,6 +50,15 @@
           <mat-select formControlName="branchId">
             <mat-option *ngFor="let branch of branchList" [value]="branch.id">{{ branch.name }}</mat-option>
           </mat-select>
+          <button
+          *ngIf="addUserForm.controls['branchId'].value"
+          matSuffix
+          mat-icon-button
+          aria-label="Clear selection"
+          (click)="clearSelection('branchId')"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
         </mat-form-field>
 
         <!-- <mat-slide-toggle formControlName="isActive">Active</mat-slide-toggle> -->
