--- a/src/app/components/pos-configuration/modals/item-dialog/item-dialog.component.scss
+++ b/src/app/components/pos-configuration/modals/item-dialog/item-dialog.component.scss
@@ -1,3 +1,16 @@
+.mat-dialog-container {
+    max-height: 80vh; 
+    overflow: hidden; 
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .card-body {
+    max-height: 60vh; 
+    overflow-y: auto; 
+    padding-right: 10px; 
+  }
+
 .modal-btn{
     display: flex;
         flex-direction: row;
@@ -7,3 +20,21 @@
     display: flex;
     flex-direction: column;
 }
+
+.transaction-row {
+    display: flex;
+    align-items: center;
+    gap: 16px; /* Adjust spacing between elements */
+    margin-bottom: 12px;
+  }
+  
+  .transaction-select,
+  .transaction-price {
+    flex: 1; /* Each field takes equal space */
+    min-width: 200px; /* Prevents shrinking too much */
+  }
+  
+  button[mat-icon-button] {
+    margin-left: 8px; /* Space between price field and remove button */
+  }
+  
