fixes for POS configuration pages

--- a/src/app/components/pos-configuration/branch/branch.component.html
+++ b/src/app/components/pos-configuration/branch/branch.component.html
@@ -40,10 +40,10 @@
               <span class="mb-0 fw-medium">{{element.address}}</span>
             </td>
           </ng-container>
-          <ng-container matColumnDef="pnrNum">
+          <ng-container matColumnDef="prnNum">
             <th mat-header-cell *matHeaderCellDef> TNR Number </th>
             <td mat-cell *matCellDef="let element">
-              <span class="mb-0 fw-medium">{{element.pnrNum}}</span>
+              <span class="mb-0 fw-medium">{{element.prnNum}}</span>
             </td>
           </ng-container>
           <!-- Active Column -->
