--- a/src/app/components/pos-configuration/modals/branch-dialog/branch-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/branch-dialog/branch-dialog.component.html
@@ -20,7 +20,7 @@
         </mat-form-field>
         <mat-form-field class="flex-1 fs-16" appearance="outline">
           <mat-label>TRN Number</mat-label>
-          <input matInput type="number" formControlName="pnrNum" placeholder="PNR Numbers" />
+          <input matInput type="text" formControlName="prnNum" placeholder="TRN Numbers" />
         </mat-form-field>
         <div>
           <mat-slide-toggle formControlName="isActive">Active</mat-slide-toggle>
