--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -83,30 +83,18 @@
       <button mat-icon-button class="ms-4 me-4" (click)="search=!search">
         <i-feather name="search" class="mt-n3 text-light-muted feather-base text-dark"></i-feather>
       </button>
-      <div class="ms-auto">
-        <button mat-button class="fs-16 pt-4 pb-4 ps-8 pe-8 text-light-muted d-flex align-items-center" [matMenuTriggerFor]="menu">
-          <div class="d-flex align-items-center">
-            <!-- <img src="assets/images/user2.webp" class="rounded-circle" alt=""> -->
-            <span class="fw-light ms-8 text-secondary">Hi,</span>
-            <span class="fw-bold ms-8">{{userDetails.username}}</span>
-            <i-feather name="chevron-down" class="feather-base"></i-feather>
-          </div>
-        </button>
-        <mat-menu #menu="matMenu" class="profile-dropdown">
-          <div class="p-16 mb-4">
-            <button mat-menu-item class="fs-16">Edit Profile</button>
-            <button mat-menu-item class="fs-16">Account</button>
-            <button mat-menu-item class="fs-16">Change Password</button>
-            <button mat-menu-item class="fs-16">My Settings</button>
-          </div> 
-
-          <hr>
-
-          <div class="p-16">
-            <button mat-flat-button color="accent" class="w-100 text-white" (click)="logout()">Logout</button>
-          </div>
-
-        </mat-menu>
+      <div class="ms-auto btn">
+        <div>
+          <button mat-button class="fs-16 pt-4 pb-4 ps-8 pe-8 text-light-muted d-flex align-items-center" >
+            <div class="d-flex align-items-center">
+              <span class="fw-light ms-8 text-secondary">Hi,</span>
+              <span class="fw-bold ms-8">{{userDetails.username}}</span>
+            </div>
+          </button>
+        </div>
+        <div>
+          <button mat-flat-button color="accent" class="w-100 text-white" (click)="logout()">Logout</button>
+        </div>
       </div>
     </mat-toolbar>
 
