--- a/src/app/components/pos-configuration/categories/categories.component.html
+++ b/src/app/components/pos-configuration/categories/categories.component.html
@@ -11,23 +11,23 @@
 
       <!-- Table -->
       <div class="table-responsive" [class.loading]="loading">
-        <table mat-table [dataSource]="dataSource" class="text-nowrap w-100">
+        <table mat-table [dataSource]="dataSource" class="text-nowrap w-100 mat-elevation-z8">
           <!-- Id Column -->
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Id </th>
             <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.id}} </td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Name </th>
             <td mat-cell *matCellDef="let element">
               <span class="mb-0 fw-medium">{{element.name}}</span>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="printer">
-            <th mat-header-cell *matHeaderCellDef> Printer </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Printer </th>
             <td mat-cell *matCellDef="let element">
               <span class="mb-0 fw-medium">{{element?.printer}}</span>
             </td>
@@ -35,7 +35,7 @@
 
           <!-- Active Column -->
           <ng-container matColumnDef="active">
-            <th mat-header-cell *matHeaderCellDef> Active </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Active </th>
             <td mat-cell *matCellDef="let element">
               <p class="badge badge-success rounded-pill" *ngIf="element.isActive">Yes</p>
               <p class="badge badge-danger rounded-pill" *ngIf="!element.isActive">No</p>
@@ -44,7 +44,7 @@
 
           <!-- Actions Column -->
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Actions </th>
             <td mat-cell *matCellDef="let element">
               <i-feather name="edit" class="feather-base me-12" (click)="editCategory(element)"></i-feather>
               <span class="action-wrapper">
