--- a/src/app/components/pos-configuration/items/items.component.html
+++ b/src/app/components/pos-configuration/items/items.component.html
@@ -14,13 +14,13 @@
         <table mat-table [dataSource]="dataSource" class="text-nowrap w-100">
           <!-- Id Column -->
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Id </th>
             <td mat-cell class="fw-medium" *matCellDef="let element"> {{ element.id }} </td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Name </th>
             <td mat-cell *matCellDef="let element">
               <span class="mb-0 fw-medium">{{ element.name }}</span>
             </td>
@@ -30,7 +30,7 @@
           <!-- Dynamic Platform Columns -->
           <ng-container *ngFor="let platform of platforms">
             <ng-container [matColumnDef]="platform">
-              <th mat-header-cell *matHeaderCellDef> {{ platform }} </th>
+              <th mat-header-cell *matHeaderCellDef class="sticky-header"> {{ platform }} </th>
               <td mat-cell *matCellDef="let element"> {{ element[platform] ||  0}} AED </td>
             </ng-container>
           </ng-container>
@@ -38,14 +38,14 @@
 
           <!-- Category Column -->
           <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef> Category </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Category </th>
             <td mat-cell *matCellDef="let element">
               <span class="mb-0 fw-medium">{{ element.category }}</span>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="printer">
-            <th mat-header-cell *matHeaderCellDef> Printer </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Printer </th>
             <td mat-cell *matCellDef="let element">
               <span class="mb-0 fw-medium">{{ element.printer }}</span>
             </td>
@@ -53,7 +53,7 @@
 
           <!-- Active Column -->
           <ng-container matColumnDef="active">
-            <th mat-header-cell *matHeaderCellDef> Active </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Active </th>
             <td mat-cell *matCellDef="let element">
               <p class="badge badge-success rounded-pill" *ngIf="element.active === 'Yes'">Yes</p>
               <p class="badge badge-danger rounded-pill" *ngIf="element.active === 'No'">No</p>
@@ -62,7 +62,7 @@
 
           <!-- Actions Column -->
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef class="sticky-header"> Actions </th>
             <td mat-cell *matCellDef="let element">
               <i-feather name="edit" class="feather-base me-12" (click)="editItem(element)"></i-feather>
               <span class="action-wrapper">
