--- a/src/app/components/pos-configuration/modals/category-dialog/category-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/category-dialog/category-dialog.component.html
@@ -12,7 +12,9 @@
 
         <mat-form-field class="flex-1 fs-16" appearance="outline">
           <mat-label>Printer</mat-label>
-            <input matInput type="text" formControlName="printer" placeholder="Printer Name" />
+          <mat-select formControlName="printer">
+            <mat-option *ngFor="let print of printerList" [value]="print.id">{{ print.name }}</mat-option>
+          </mat-select>
         </mat-form-field>
 
         <mat-slide-toggle formControlName="isActive">Active</mat-slide-toggle>
