--- a/src/app/components/pos-configuration/outlet-user/outlet-user.component.html
+++ b/src/app/components/pos-configuration/outlet-user/outlet-user.component.html
@@ -14,58 +14,58 @@
       <table mat-table [dataSource]="dataSource" class="text-nowrap w-100">
 
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Id </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Id </th>
           <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <ng-container matColumnDef="username">
-          <th mat-header-cell *matHeaderCellDef> User Name </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> User Name </th>
           <td mat-cell *matCellDef="let element">
             <p class="mb-0 fw-medium">{{element.username}}</p>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="firstName">
-          <th mat-header-cell *matHeaderCellDef> First Name </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> First Name </th>
           <td mat-cell *matCellDef="let element">
             <span class="mb-0 fw-medium">{{element.firstName}}</span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="lastName">
-          <th mat-header-cell *matHeaderCellDef> Last Name </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Last Name </th>
           <td mat-cell *matCellDef="let element">
             <p class="mb-0 fw-medium">{{element.lastName}}</p>
           </td>
         </ng-container>
         <ng-container matColumnDef="branch">
-          <th mat-header-cell *matHeaderCellDef> Branch </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Branch </th>
           <td mat-cell *matCellDef="let element">
             <p class="mb-0 fw-medium">{{element.branch?.name}}</p>
           </td>
         </ng-container>
         <ng-container matColumnDef="designation">
-          <th mat-header-cell *matHeaderCellDef> Designation </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Designation </th>
           <td mat-cell *matCellDef="let element">
             <p class="mb-0 fw-medium">{{element?.designation?.name}}</p>
           </td>
         </ng-container>
         <ng-container matColumnDef="phone">
-          <th mat-header-cell *matHeaderCellDef> Phone </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Phone </th>
           <td mat-cell *matCellDef="let element">
             <p class="mb-0 fw-medium">{{element?.phone}}</p>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="active">
-          <th mat-header-cell *matHeaderCellDef> Active </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Active </th>
           <td mat-cell *matCellDef="let element">
             <p class="badge badge-success rounded-pill" *ngIf="element.isActive">Yes</p>
             <p class="badge badge-danger rounded-pill" *ngIf="!element.isActive">No</p>
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <th mat-header-cell *matHeaderCellDef class="sticky-header"> Actions </th>
           <td mat-cell *matCellDef="let element">
             <i-feather name="edit" class="feather-base me-12" (click)="editUser(element)"></i-feather>
             <span class="action-wrapper">
