--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -30,4 +30,14 @@
     justify-content: space-evenly;
 }
 
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Ensure it stays on top */
+  background: white; /* Maintain background to avoid transparency */
+}
+
+mat-sidenav-content {
+  overflow: auto;
+}
 
